--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sample-axwt-helloworld</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>recommender</name>
+	<name>helloworld axwt</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
